PostGIS 2.5.0
2018/xx/xx
* New Features *
  - #3876, ST_Angle function (Rémi Cura)
  - #3564, ST_LineInterpolatePoints (Dan Baston)
  - #3896, PostGIS_Extensions_Upgrade()

* Breaking Changes *
  - #3885, version number removed from address_standardize lib file
  - #3893, raster support functions can only be loaded in the same schema
           with core PostGIS functions.

* Enhancements and Fixes*
  - #3899, BTree sort order is now defined on collections of EMPTY and
           same-prefix geometries (Darafei Praliaskouski)
  - #3864, Performance improvement for sorting POINT geometries
           (Darafei Praliaskouski)
  - #3900, GCC warnings fixed, make -j is now working (Darafei Praliaskouski)
  - TopoGeo_addLinestring robustness improvements (Sandro Santilli)
    #1855, #1946, #3718, #3838
  - #3234, Do not accept EMPTY points as topology nodes (Sandro Santilli)
  - #3892, Prevent version mixup when creating extension from unpackaged
           (Sandro Santilli)

PostGIS 2.4.0
2017/09/30

 * New Features *
  - #3822, Have postgis_full_version() also show and check version of
           PostgreSQL the scripts were built against (Sandro Santilli)
  - #2411, curves support in ST_Reverse (Sandro Santilli)
  - #2951, ST_Centroid for geography (Danny Götte)
  - #3788, Allow postgis_restore.pl to work on directory-style (-Fd) dumps
           (Roger Crew)
  - #3772, Direction agnostic ST_CurveToLine output (Sandro Santilli / KKGeo)
  - #2464, ST_CurveToLine with MaxError tolerance (Sandro Santilli / KKGeo)
  - #3599, Geobuf output support via ST_AsGeobuf (Björn Harrtell)
  - #3661, Mapbox vector tile output support via ST_AsMVT (Björn Harrtell / CartoDB)
  - #3689, Add orientation checking and forcing functions (Dan Baston)
  - #3753, Gist penalty speed improvements for 2D and ND points
           (Darafei Praliaskouski, Andrey Borodin)
  - #3677, ST_FrechetDistance (Shinichi Sugiyama)
  - Most aggregates (raster and geometry),