@@ -306,3 +306,9 @@ ERROR:  invalid KML representation
 #3704|t
 #3709|t
 #3774|t
+#1014a|POINT(0 0)
+#1014a|POINT(-0 0)
+#1014b|POINT(0 1)
+#1014c|1|POINT(0 1)
+#1014c|2|POINT(1 2)
+#1014c|3|POINT(2 3)
