@@ -1,5 +1,6 @@
 PostGIS 2.5.0
 2018/xx/xx
+
 * New Features *
   - #3876, ST_Angle function (Rémi Cura)
   - #3564, ST_LineInterpolatePoints (Dan Baston)
@@ -21,6 +22,8 @@ PostGIS 2.5.0
   - #3234, Do not accept EMPTY points as topology nodes (Sandro Santilli)
   - #3892, Prevent version mixup when creating extension from unpackaged
            (Sandro Santilli)
+  - #1014, Hashable geometry, allowing direct use in CTE signatures (Paul Ramsey)
+
 
 PostGIS 2.4.0
 2017/09/30
